DestinationListCard finished. Just need minor fixes
